# LearnOpenCV

./: .gitignore  README.md  notes.md  《图像信息处理》课程实验1_董文杰.doc  《图像信息处理》课程实验2_董文杰.docx
exp1/: CMakeLists.txt  example.cpp  example.h  main.cpp
exp2/: CMakeLists.txt  main.cpp  projection.cpp
exp3/: CMakeLists.txt  item1.cpp  item1.h  item2.cpp  item2.h  item3.cpp  item3.h  main.cpp
exp4/: CMakeLists.txt  item1.cpp  item2.cpp  item3.cpp  main.cpp
exp5/: CMakeLists.txt  item1.cpp  item2.cpp  item3.cpp  main.cpp
exp6/: CMakeLists.txt  item1.cpp  item2.cpp  main.cpp
